--- a/app/src/main/res/layout/fresh_grid_item.xml
+++ b/app/src/main/res/layout/fresh_grid_item.xml
@@ -7,8 +7,9 @@
 
     <ImageView
         android:id="@+id/fresh_img"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="250dp"
+        android:layout_height="300dp"
+        android:scaleType="fitXY"
         android:src="@mipmap/ic_launcher" />
 
     <TextView
