--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical">
@@ -19,10 +18,9 @@
 
         <ImageView
             android:id="@+id/goods_list_back"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_width="0.0dip"
+            android:layout_height="52.0dip"
+            android:layout_weight="1.0"
             android:gravity="center"
             android:src="@drawable/abs__ic_back" />
 
@@ -69,8 +67,9 @@
 
         <ImageView
             android:id="@+id/goods_list_dot"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
+            android:layout_width="0.0dip"
+            android:layout_height="52.0dip"
+            android:layout_weight="1.0"
             android:gravity="center"
             android:src="@drawable/guide_cart_nm" />
     </LinearLayout>
@@ -99,6 +98,7 @@
                 android:layout_weight="1.0"
                 android:gravity="center"
                 android:text="综合"
+                android:clickable="true"
                 android:textColor="#ffa2a2a2"
                 android:textSize="14.0sp" />
 
@@ -114,6 +114,7 @@
                 android:layout_weight="1.0"
                 android:gravity="center"
                 android:text="最新"
+                android:clickable="true"
                 android:textColor="#ffa2a2a2"
                 android:textSize="14.0sp" />
 
@@ -129,6 +130,7 @@
                 android:layout_weight="1.0"
                 android:gravity="center"
                 android:text="销量"
+                android:clickable="true"
                 android:textColor="#ffa2a2a2"
                 android:textSize="14.0sp" />
 
@@ -150,6 +152,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="价格"
+                    android:clickable="true"
                     android:textColor="#ffa2a2a2"
                     android:textSize="14.0sp" />
 
@@ -168,6 +171,7 @@
             android:orientation="vertical">
 
             <com.handmark.pulltorefresh.library.PullToRefreshGridView
+                xmlns:ptr="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/goods_list_gridview"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
@@ -177,7 +181,14 @@
                 android:horizontalSpacing="10.0dip"
                 android:numColumns="2"
                 android:scrollbars="none"
-                android:verticalSpacing="10.0dip" />
+                android:verticalSpacing="10.0dip"
+                ptr:ptrMode="both"
+                ptr:ptrDrawable="@drawable/ssdk_oks_ptr_ptr"
+                ptr:ptrAnimationStyle="flip"
+                />
+
+
+
 
             <ImageView
                 android:id="@+id/goods_list_back_top"
